# BlockChain

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  block.cpp  block.h  block_chain.cpp  block_chain.h  main.cpp  proof_of_work.cpp  proof_of_work.h  transaction.cpp  transaction.h  tx_input.cpp  tx_input.h  tx_output.cpp  tx_output.h  wallet.cpp  wallet.h  wallet_helper.cpp  wallet_helper.h
src/util/: CMakeLists.txt  crypt.cpp  crypt.h  db_helper.cpp  db_helper.h  sha256.cpp
